--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <script src="assets/javascript/app.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 
-    <title>Document</title>
+    <title>Giphy</title>
 </head>
 <body>
     <div class="container">
