--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
 </head>
 <body>
     <div class="container">
+        <input id="add-item">
+        <button id="add-button">Add</button>
         <div id="buttons"></div>
         <div id="gifs"></div>
 
