--- a/index.html
+++ b/index.html
@@ -10,15 +10,24 @@
         crossorigin="anonymous"></script>
     <script src="assets/javascript/app.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <title>Giphy</title>
+    <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
     <div class="container">
-        <input id="add-item">
-        <button id="add-button">Add</button>
+        <div class="jumbotron text-center">
+            <h1>Gif Finder</h1>
+        </div>
+        <form class="">
+            <div class="form-group">
+                <input id="add-item" class="form-control" placeholder="search new item">
+                <button id="add-button" class="btn btn-primary">Add</button>
+            </div>
+        </form>
         <div id="buttons"></div>
         <div id="gifs"></div>
+        
 
 
     </div>
