--- a/index.html
+++ b/index.html
@@ -15,22 +15,19 @@
     <link rel="stylesheet" href="assets/css/style.css">
 </head>
 <body>
-    <div class="container">
+    <div class="container border border-dark">
         <div class="jumbotron text-center">
-            <h1>Gif Finder</h1>
+            <h1>find it in a GIF-y</h1>
         </div>
-        <form class="">
+        <form class="border">
             <div class="form-group">
-                <input id="add-item" class="form-control" placeholder="search new item">
+                <input id="add-item" class="form-control border border-info" placeholder="search new item">
+                <br>
                 <button id="add-button" class="btn btn-primary">Add</button>
             </div>
         </form>
         <div id="buttons"></div>
         <div id="gifs"></div>
-        
-
-
     </div>
-    
 </body>
 </html>
