added title tags

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             </div>
         </form>
         <div id="buttons"></div>
-        <div id="gifs"></div>
+        <div id="gifs" class="row text-center"></div>
     </div>
 </body>
 </html>
