--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         </div>
         <form class="border">
             <div class="form-group">
-                <input id="add-item" class="form-control border border-info" placeholder="search new item">
+                <input id="add-item" class="form-control border border-info" placeholder="add new item">
                 <br>
                 <button id="add-button" class="btn btn-primary">Add</button>
             </div>
