--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
         <form class="border">
             <div class="form-group">
                 <input id="add-item" class="form-control border border-info" placeholder="add new item">
+                <p id="char-remaining"></p>
                 <br>
                 <button id="add-button" class="btn btn-primary">Add</button>
             </div>
