--- a/index.html
+++ b/index.html
@@ -19,10 +19,10 @@
         <div class="jumbotron text-center">
             <h1>find it in a GIF-y</h1>
         </div>
-        <form class="border">
+        <form class="card card-default">
             <div class="form-group">
                 <input id="add-item" class="form-control border border-info" placeholder="add new item">
-                <p id="char-remaining">Characters Remaining: 20</p>
+                <p id="char-remaining">Characters: 12</p>
                 <br>
                 <button id="add-button" class="btn btn-primary">Add</button>
             </div>
