--- a/index.html
+++ b/index.html
@@ -19,14 +19,14 @@
         <div class="jumbotron text-center">
             <h1>find it in a GIF-y</h1>
         </div>
-        <form class="card card-default">
-            <div class="form-group">
+            <div class="card card-default">
+                <div class="card-header">
+                    Search New Item
+                </div>
                 <input id="add-item" class="form-control border border-info" placeholder="add new item">
                 <p id="char-remaining">Characters: 12</p>
-                <br>
                 <button id="add-button" class="btn btn-primary">Add</button>
             </div>
-        </form>
         <div id="buttons"></div>
         <div id="gifs" class="row text-center"></div>
     </div>
