add more gifs button

--- a/index.html
+++ b/index.html
@@ -25,7 +25,10 @@
                 </div>
                 <input id="add-item" class="form-control border border-info" placeholder="add new item">
                 <p id="char-remaining">Characters: 12</p>
-                <button id="add-button" class="btn btn-primary">Add</button>
+                <div class="row">
+                    <button id="add-button" class="btn btn-primary">Add</button>
+                    <button id="more-gifs-button" class="btn btn-light">More GIFs!</button>
+                </div>
             </div>
         <div id="buttons"></div>
         <div id="gifs" class="row text-center"></div>
